--- a/src/app/orderdetail/orderdetail.component.html
+++ b/src/app/orderdetail/orderdetail.component.html
@@ -8,13 +8,13 @@
     <input [(ngModel)] = "personal.address" type="text" name="address" class="form-control" placeholder="Address" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 <div class="mb-3 col-5">
-    <input [(ngModel)] = "personal.phone" type="text" name="phone" class="form-control" placeholder="Mobile Number" aria-label="Username" aria-describedby="basic-addon1">
+    <input [(ngModel)] = "personal.phone" type="text" name="phone" class="form-control" placeholder="Mobile Number" maxlength="10" minlength="10" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 <div class="mb-3 col-5">
     <input [(ngModel)] = "personal.city" type="text" name="city" class="form-control" placeholder="City" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 <div class="mb-3 col-5">
-    <input [(ngModel)] = "personal.pincode" type="text" name="pincode" class="form-control" placeholder="Pincode" aria-label="Username" aria-describedby="basic-addon1">
+    <input [(ngModel)] = "personal.pincode" type="text" name="pincode" class="form-control" placeholder="Pincode" maxlength="6" minlength="6" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 <div class="mb-3 col-5">
     <button class="btn btn-primary"  (click) = "checkout()">Submit</button>
