--- a/src/app/cakedetail/cakedetail.component.html
+++ b/src/app/cakedetail/cakedetail.component.html
@@ -1,3 +1,4 @@
+<div class="containers">
 <section>
     <div class="left">
         <img src="{{detail.image}}" alt="">
@@ -19,5 +20,4 @@
         <button id="buy" class="btn btn-success">BUY NOW</button>
     </div>
 </section>
-
-
+</div>
