--- a/src/app/cakecart/cakecart.component.css
+++ b/src/app/cakecart/cakecart.component.css
@@ -1,18 +1,46 @@
+.table h2{
+    text-align: center;
+    color: brown;
+    background-color: burlywood;
+}
+.table .table-heading ,.table-record{
+    display: grid;
+    grid-template-columns: repeat(6,1fr);
+    margin-left: 4vw;
+}
+
+.containers{
+    height: auto;   
+}
 .table{
-    background: url('/assets/background.jpg');
+    position:relative;
+    width: 70%;
+    height: auto;
+    left: 15%;
+    top: 10vh;
+    border: 2px solid #000000;
+    border-radius: 5px;
+}
+img{
+    width: 10vw;
+    height: 30vh;
 }
 #cakeimg{
-    width: 5vw;
-    height: 5vw;
+    width: 7vw;
+    height: 15vh;
 }
-li{
-    list-style: none;
+.table-record:hover{
+    color: rgba(128, 128, 128, 0.753);
 }
 #norecord{
     width: 30vw;
     height: 30vh;
-    margin-left: 35vw;
-    margin-top: 20vh;
+    margin-left: 20vw;
+    margin-top: 10vh;
+    margin-bottom: 5vh;
+}
+li{
+    list-style: none;
 }
 #checkout{
     margin-left: 80vw;
@@ -21,10 +49,4 @@ li{
 #admin{
     margin-left: 2vw;
     margin-top: 2vh;
-}
-#title{
-    padding-left: 45vw;
-    color: brown;
-    background-color: burlywood;
-    margin-top: 3vh;
 }
