--- a/src/app/cakecart/cakecart.component.html
+++ b/src/app/cakecart/cakecart.component.html
@@ -1,7 +1,6 @@
-
   <button id="checkout" routerLink = "/checkout"  class="btn btn-success" type="button">Checkout</button>
   <button id="admin" routerLink = "/admin"  class="btn btn-success" type="button">Admin panel</button>
-  <h2 id="title">Your Cart</h2>
+  <!-- <h2 id="title">Your Cart</h2>
   <table class="table table-hover">
     <thead>
         <tr>
@@ -22,7 +21,29 @@
           <td>{{item.weight}} kg</td>
           <td><i (click) = "remove(item.cakeid)" class="fa fa-trash"></i></td>
         </tr>
-</table>
+</table> -->
+
+<div class="containers">
+  <div class="table">
+    <h2 id="title">Your Cart</h2>
+    <div class="table-heading">
+      <th scope="col">#</th>
+      <th scope="col">Cake</th>
+      <th scope="col">Cake Name</th>
+      <th scope="col">Price</th>
+      <th scope="col">Weight</th>
+      <th scope="col">Remove</th>
+    </div>
+  
+  
+  <div *ngFor = "let item of detail; let i = index" class="table-record">
+    <td scope="row">{{ i + 1 }}</td>
+    <td scope="col"><img id="cakeimg" src="{{item.image}}" alt=""></td>
+    <td>{{item.name}}</td>
+    <td>Rs.{{item.price}}/-</td>
+    <td>{{item.weight}} kg</td>
+    <td><i (click) = "remove(item.cakeid)" class="fa fa-trash"></i></td>
+  </div>
 
 <li *ngIf="detail?.length == 0">
   <span class="search_no_results">
