--- a/src/app/cakedetail/cakedetail.component.css
+++ b/src/app/cakedetail/cakedetail.component.css
@@ -1,10 +1,13 @@
+.containers{
+
+}
 section{
     display: flex;
     justify-content: space-around;
-    background: burlywood;
+    /* background: burlywood; */
+    background-color: rgba(188, 143, 143, 0.561);
     height: 100vh;
     color: purple;
-    border: 2px solid blue;
 }
 .left{
     /* width: 10%; */
