--- a/src/app/forgot/forgot.component.html
+++ b/src/app/forgot/forgot.component.html
@@ -4,6 +4,6 @@
     <div class="mb-3 col-4">
         <input [(ngModel)] = "user.email" type="text" class="form-control" placeholder="Enter your Email Address" name="email" aria-label="Username" aria-describedby="addon-wrapping">
     </div>
-    <button (click) = "forgot()" id="submit" class="btn btn-primary">Next</button>
+    <button (click) = "forgot()" id="submit">Reset</button>
 </form>
 </div>
