--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -7,7 +7,7 @@
 <div class="mb-3 col-4">
     <input [(ngModel)] = "user.password" type="password" class="form-control" placeholder="Enter your Password" name="password" aria-label="Username" aria-describedby="addon-wrapping" required>
 </div>
-  <button type="submit" class="btn btn-primary" id="login">Login</button>
+  <button type="submit"  id="login">Login</button>
   <p class="mt-3" id="signup">Create an account?<a routerLink = "/signup">Signup</a></p>
   <p id="forgot">Forget Password?<a routerLink = "/forgot">Forgot Password</a></p>
 </form>
