--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,14 +1,14 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-danger">
+<nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
       <a appNav class="navbar-brand" routerLink = "/">🎂   CakeShop</a>
 
         <form class="d-flex">
           <input name="search" [(ngModel)] = "searchcakes" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-          <button  (click) = "search()" class="btn btn-outline-success" type="submit">Search</button>
-          <button routerLink = "/order" *ngIf = "!member" class="btn btn-primary" type="button">orders</button>
-          <button routerLink="./cakecart" *ngIf = "!member" class="btn btn-primary" type="button"><i class="fas fa-shopping-cart"></i></button>
-          <button routerLink = "./login" *ngIf = "member" class="btn btn-primary" type="submit">Login</button>
-          <button (click) = "logout()" *ngIf = "!member" class="btn btn-primary" type="button">Logout</button>
+          <button  (click) = "search()" class="btn btn-outline-danger" type="submit">Search</button>
+          <button routerLink = "/order" class="btn btn-outline-danger" *ngIf = "!member"  type="button">orders</button>
+          <button routerLink="./cakecart" class="btn btn-outline-danger" *ngIf = "!member"  type="button"><i class="fas fa-shopping-cart"></i></button>
+          <button routerLink = "./login" class="btn btn-outline-danger" *ngIf = "member"  type="submit">Login</button>
+          <button (click) = "logout()" class="btn btn-outline-danger" *ngIf = "!member"  type="button">Logout</button>
         </form>
       </div>
   </nav>
