--- a/src/app/order/order.component.css
+++ b/src/app/order/order.component.css
@@ -1,22 +1,24 @@
 .table h2{
     text-align: center;
+    color: brown;
+    background-color: burlywood;
 }
 .table .table-heading, .table-record{
     display: grid;
     grid-template-columns: repeat(6,1fr);
 }
 .containers{
-    background: url('/assets/background.jpg');
-    height: 200vh;
+    height: auto;
     
 }
 .table{
-    background: rgba(255, 192, 203, 0.678);
     position:relative;
     width: 70%;
     height: auto;
     left: 15%;
     top: 10vh;
+    border: 2px solid #000000;
+    border-radius: 5px;
 }
 .hidden{
     display: none;
