--- a/src/app/signup/signup.component.css
+++ b/src/app/signup/signup.component.css
@@ -4,7 +4,6 @@ h3{
     padding-bottom: 5vh;
 }
 .containers{
-    background: url('/assets/back.jpg') no-repeat;
     min-width: 100vw;
     min-height: 100vh;
 }
@@ -13,7 +12,9 @@ form{
     background-color: rgba(188, 143, 143, 0.561);
     width: 30%;
     left: 35%;
-    top: 5vh;
+    top: 7vh;
+    border-radius: 5px;
+    border: 2px solid #000000;
 }
 input{
     width: 20vw;
@@ -21,6 +22,9 @@ input{
 }
 button{
     margin-left: 12vw;
+    background-color: burlywood;
+    border-radius: 5px;
+    border: 2px solid #000000;
 }
 #signup{
     margin-left: 12vw;
