--- a/src/app/signup/signup.component.html
+++ b/src/app/signup/signup.component.html
@@ -10,6 +10,6 @@
 <div class="mb-3 col-4">
     <input [(ngModel)] = "users.password" type="password" class="form-control" placeholder="Enter your Pasword" name="password" aria-label="Username" aria-describedby="addon-wrapping">
 </div>
-<button (click) = "register()" id="signup" class="btn btn-success">Signup</button>
+<button (click) = "register()" id="signup">Signup</button>
 </form>
 </div>
