--- a/src/app/orderdetail/orderdetail.component.html
+++ b/src/app/orderdetail/orderdetail.component.html
@@ -17,7 +17,7 @@
     <input [(ngModel)] = "personal.pincode" type="text" name="pincode" class="form-control" placeholder="Pincode" maxlength="6" minlength="6" aria-label="Username" aria-describedby="basic-addon1">
 </div>
 <div class="mb-3 col-5">
-    <button class="btn btn-primary"  (click) = "checkout()">Submit</button>
+    <button  (click) = "checkout()">Submit</button>
 </div>
 </form>
 </div>
