--- a/src/app/summary/summary.component.css
+++ b/src/app/summary/summary.component.css
@@ -4,6 +4,8 @@
     top: 5vh;
     width: 50vw;
     background-color: rgba(0, 0, 255, 0.452);
+    border: 2px solid #000000;
+    border-radius: 5px;
 }
 #title{
     /* margin-left: 10vw; */
