--- a/src/app/addcake/addcake.component.css
+++ b/src/app/addcake/addcake.component.css
@@ -8,6 +8,8 @@ form{
     width: 60%;
     left: 20%;
     top: 10vh;
+    border: 2px solid #000000;
+    border-radius: 5px;
 }
 h3{
     text-align: center;
@@ -41,7 +43,7 @@ img{
 #edit{
     margin-left: 40vw;
     margin-bottom: 5vh;
+    background-color: burlywood;
+    border-radius: 5px;
+    border: 2px solid #000000;
 }
-/* option[value=""][disabled] {
-    display: none;
-  } */
