--- a/src/app/addcake/addcake.component.html
+++ b/src/app/addcake/addcake.component.html
@@ -47,7 +47,7 @@
     <div id="photo">
         <img [src] ="addcake.image" alt="" srcset="">
     </div>
-      <button (click) = "add()" class="btn btn-primary" id="edit">Add</button>
+      <button (click) = "add()" id="edit">Add Cake</button>
     </form>
     </div>
 
