--- a/src/app/cakecard/cakecard.component.html
+++ b/src/app/cakecard/cakecard.component.html
@@ -5,7 +5,7 @@
     <div class="card-body">
       <h5 class="card-title">{{cakes.name}}</h5>
       <p class="card-text">{{cakes.Type}}</p>
-      <p class="card-text">Rs.{{cakes.price}}/-</p>
+      <p class="card-text">Rs.{{cakes.price | discount}}/-</p>
     </div>
   </div>
 
