--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -11,7 +11,11 @@ h3{
 }
 h2{
     font-size: 90px;
-    margin-left: 12vw;
+    margin-left: 7vw;
+}
+h1{
+    margin-top: 12vh;
+    margin-left: 2vw;
 }
 
 
