--- a/src/app/addcake/addcake.component.css
+++ b/src/app/addcake/addcake.component.css
@@ -1,4 +1,4 @@
-.containers{
+/* .containers{
     min-width: 100vw;
     min-height: 130vh;
 }
@@ -41,6 +41,54 @@ img{
     margin-top: 5vh;
 }
 #edit{
+    margin-left: 40vw;
+    margin-bottom: 5vh;
+    background-color: burlywood;
+    border-radius: 5px;
+    border: 2px solid #000000;
+} */
+
+.containers{
+    /* background: url('/assets/back.jpg') no-repeat; */
+    min-width: 100vw;
+    min-height: 130vh;
+}
+form{
+    position: relative;
+    background-color: rgba(188, 143, 143, 0.561);
+    width: 60%;
+    left: 20%;
+    top: 10vh;
+}
+h2{
+    text-align: center;
+    padding-top: 3vh;
+    padding-bottom: 5vh;
+    color: brown;
+    background-color: burlywood;
+}
+input,textarea,select{
+    width: 20vw;
+}
+#detail{
+    display: flex;
+    justify-content: space-around;
+}
+#type{
+    margin-left: 5vw;
+}
+img{
+    max-width: 10vw;
+    max-height: 20vh;
+}
+#image{
+    margin-left: 5vw;
+}
+#photo{
+    margin-left: 15vw;
+    margin-top: 5vh;
+}
+#add{
     margin-left: 40vw;
     margin-bottom: 5vh;
     background-color: burlywood;
