--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -4,7 +4,9 @@
     height: 35vh;
     left: 3vw;
     top: 15vh;
-    background-color: rgba(0, 0, 255, 0.596);
+    /* background-color: rgba(0, 0, 255, 0.596); */
+    color: brown;
+    background-color: burlywood;
     border: 2px solid #000000;
     border-radius: 5px;
 }
