--- a/src/app/edit/edit.component.css
+++ b/src/app/edit/edit.component.css
@@ -10,7 +10,7 @@ form{
     left: 20%;
     top: 10vh;
 }
-h3{
+h2{
     text-align: center;
     padding-top: 1vh;
     padding-bottom: 5vh;
@@ -41,4 +41,7 @@ img{
 #edit{
     margin-left: 40vw;
     margin-bottom: 5vh;
+    background-color: burlywood;
+    border-radius: 5px;
+    border: 2px solid #000000;
 }
