--- a/src/app/forgot/forgot.component.css
+++ b/src/app/forgot/forgot.component.css
@@ -1,7 +1,9 @@
-h3{
+h2{
     text-align: center;
-    padding-top: 10vh;
-    padding-bottom: 5vh;
+    padding-top: 1vh;
+    padding-bottom: 2vh;
+    color: brown;
+    background-color: burlywood;
 }
 .containers{
     min-width: 100vw;
