--- a/src/app/orderdetail/orderdetail.component.css
+++ b/src/app/orderdetail/orderdetail.component.css
@@ -1,5 +1,9 @@
-h2 {
+h2{
     text-align: center;
+    padding-top: 1vh;
+    padding-bottom: 2vh;
+    color: brown;
+    background-color: burlywood;
 }
 input {
     margin-left: 15vw;
@@ -7,13 +11,15 @@ input {
 button {
     margin-left: 22vw;
     margin-bottom: 3vh;
-    background-color: rgba(0, 0, 255, 0.596);
+    /* background-color: rgba(0, 0, 255, 0.596); */
+    background-color: burlywood;
     border-radius: 5px;
     border: 2px solid #000000;
 }
 form{
     position: relative;
-    background-color: rgba(255, 192, 203, 0.678);
+    /* background-color: rgba(255, 192, 203, 0.678); */
+    background-color: rgba(188, 143, 143, 0.561);
     width: 50vw;
     left: 30%;
     top: 5vh;
