--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -11,7 +11,7 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor = "let item of detail; let i = index">
+        <tr *ngFor = "let item of detail; let i = index" id="record">
           <td scope="row">{{ i + 1 }}</td>
           <td scope="col"><img id="cakeimg" src="{{item.image}}" alt=""></td>
           <td>{{item.name}}</td>
