--- a/src/app/carousal/carousal.component.html
+++ b/src/app/carousal/carousal.component.html
@@ -1,8 +1,13 @@
+<!-- for creating a carousal -->
+
 <div id="carouselExampleSlidesOnly" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
+
+      <!-- for active image -->
       <div class="carousel-item active">
         <img src="{{image[0]}}" class="d-block w-100" alt="...">
       </div>
+      <!-- for looping a carousal  images-->
       <div *ngFor = "let slide of image.slice(1)" class="carousel-item">
         <img src="{{slide}}" class="d-block w-100" alt="images">
       </div>
