--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,4 +1,7 @@
+<!-- For creating checkout sidebar -->
+
 <div class="containers">
+    <!-- for creating sidebar -->
     <div class="sidebar">
         <li class="active" routerLink="/checkout">order-summary</li>
         <li [routerLink]="['orderdetail']">Place Order</li>
