--- a/src/app/forgot/forgot.component.html
+++ b/src/app/forgot/forgot.component.html
@@ -1,9 +1,13 @@
+<!-- For forgot page UI -->
 <div class="containers">
+    <!-- creating a form -->
 <form action="">
+    <!-- Heading -->
     <h2>Reset a password</h2>
     <div class="mb-3 col-4">
         <input [(ngModel)] = "user.email" type="text" class="form-control" placeholder="Enter your Email Address" name="email" aria-label="Username" aria-describedby="addon-wrapping">
     </div>
+    <!-- creating a reset button -->
     <button (click) = "forgot()" id="submit">Reset</button>
 </form>
 </div>
