--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,3 +1,4 @@
+/* For styling heading */
 h2{
     text-align: center;
     padding-top: 1vh;
@@ -5,10 +6,12 @@ h2{
     color: brown;
     background-color: burlywood;
 }
+/* For styling page */
 .containers{
     min-width: 100vw;
     min-height: 100vh;
 }
+/* For styling form */
 form{
     position: relative;
     background-color: rgba(188, 143, 143, 0.561);
@@ -18,19 +21,23 @@ form{
     border-radius: 5px;
     border: 2px solid #000000;
 }
+/* For styling input box */
 input{
     width: 20vw;
     margin-left: 5vw;
 }
+/* For styling button */
 button{
     margin-left: 12vw;
     background-color: burlywood;
     border-radius: 5px;
     border: 2px solid #000000;
 }
+/* For styling sign-up link */
 #signup{
     margin-left: 5vw;
 }
+/* For styling password forgot link */
 #forgot{
     margin-left: 5vw;
     padding-bottom: 4vh;
