--- a/src/app/addcake/addcake.component.css
+++ b/src/app/addcake/addcake.component.css
@@ -1,58 +1,9 @@
-/* .containers{
-    min-width: 100vw;
-    min-height: 130vh;
-}
-form{
-    position: relative;
-    background-color: rgba(188, 143, 143, 0.561);
-    width: 60%;
-    left: 20%;
-    top: 10vh;
-    border: 2px solid #000000;
-    border-radius: 5px;
-}
-h3{
-    text-align: center;
-    padding-top: 10vh;
-    padding-bottom: 5vh;
-}
-input,textarea,select{
-    width: 20vw;
-}
-#detail{
-    display: flex;
-    justify-content: space-around;
-}
-#categories{
-    margin-left: 5vw;
-}
-#type{
-    margin-left: 10vw;
-}
-img{
-    max-width: 10vw;
-    max-height: 20vh;
-}
-#image{
-    margin-left: 5vw;
-}
-#photo{
-    margin-left: 15vw;
-    margin-top: 5vh;
-}
-#edit{
-    margin-left: 40vw;
-    margin-bottom: 5vh;
-    background-color: burlywood;
-    border-radius: 5px;
-    border: 2px solid #000000;
-} */
-
+/* for full screen */
 .containers{
-    /* background: url('/assets/back.jpg') no-repeat; */
     min-width: 100vw;
     min-height: 130vh;
 }
+/* for form */
 form{
     position: relative;
     background-color: rgba(188, 143, 143, 0.561);
@@ -60,6 +11,7 @@ form{
     left: 20%;
     top: 10vh;
 }
+/* for title */
 h2{
     text-align: center;
     padding-top: 3vh;
@@ -67,9 +19,11 @@ h2{
     color: brown;
     background-color: burlywood;
 }
+/* for input boxes, textareas, select-options */
 input,textarea,select{
     width: 20vw;
 }
+/* for dividing page into sections */
 #detail{
     display: flex;
     justify-content: space-around;
@@ -77,6 +31,7 @@ input,textarea,select{
 #type{
     margin-left: 5vw;
 }
+/* for image style */
 img{
     max-width: 10vw;
     max-height: 20vh;
@@ -88,6 +43,7 @@ img{
     margin-left: 15vw;
     margin-top: 5vh;
 }
+/* for add cake button */
 #add{
     margin-left: 40vw;
     margin-bottom: 5vh;
