--- a/src/app/checkout/checkout.component.css
+++ b/src/app/checkout/checkout.component.css
@@ -1,10 +1,16 @@
+/* for styling page */
+.containers{
+    min-width: 100vw;
+    min-height: 100vh;
+    display: flex;
+}
+/* for styling sidebar */
 .sidebar{
     position: relative;
     width: 20%;
     height: 35vh;
     left: 3vw;
     top: 15vh;
-    /* background-color: rgba(0, 0, 255, 0.596); */
     color: brown;
     background-color: burlywood;
     border: 2px solid #000000;
@@ -18,8 +24,4 @@
 .sidebar li:hover{
     color: red
 }
-.containers{
-    min-width: 100vw;
-    min-height: 100vh;
-    display: flex;
-}
+
