--- a/src/app/edit/edit.component.css
+++ b/src/app/edit/edit.component.css
@@ -1,8 +1,9 @@
+/* for styling page */
 .containers{
-    /* background: url('/assets/back.jpg') no-repeat; */
     min-width: 100vw;
     min-height: 130vh;
 }
+/* for styling form */
 form{
     position: relative;
     background-color: rgba(188, 143, 143, 0.561);
@@ -10,6 +11,7 @@ form{
     left: 20%;
     top: 10vh;
 }
+/* for styling heading */
 h2{
     text-align: center;
     padding-top: 1vh;
@@ -17,16 +19,20 @@ h2{
     color: brown;
     background-color: burlywood;
 }
+/* for styling input boxes, textareas, slect-options */
 input,textarea,select{
     width: 20vw;
 }
+/* for dividing sections */
 #detail{
     display: flex;
     justify-content: space-around;
 }
+
 #type{
     margin-left: 5vw;
 }
+/* for styling images */
 img{
     width: 10vw;
     height: 20vh;
@@ -38,6 +44,7 @@ img{
     margin-left: 15vw;
     margin-top: 5vh;
 }
+/* for styling Edit button */
 #edit{
     margin-left: 40vw;
     margin-bottom: 5vh;
