--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,13 +1,9 @@
+/* for styling heading */
 h3{
     text-align: center;
     margin-top: 5vh;
     margin-bottom: 4vh;
     font-size: 2.5em;
-}
-.cakes{
-    display: grid;
-    grid-template-columns: repeat(4,1fr);
-    gap: 2em; 
 }
 h2{
     font-size: 90px;
@@ -17,6 +13,9 @@ h1{
     margin-top: 12vh;
     margin-left: 2vw;
 }
-
-
-
+/* for styling cake card */
+.cakes{
+    display: grid;
+    grid-template-columns: repeat(4,1fr);
+    gap: 2em; 
+}
