--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,13 +1,21 @@
+<!-- for creating navigation-bar -->
 <nav class="navbar navbar-expand-lg navbar-light">
     <div class="container-fluid">
+      <!-- creating link -->
       <a appNav class="navbar-brand" routerLink = "/">🎂   CakeShop</a>
-
+      <!-- creating a form -->
         <form class="d-flex">
+          <!-- creating a search bar -->
           <input name="search" [(ngModel)] = "searchcakes" class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <!-- creating a search button -->
           <button  (click) = "search()" class="btn btn-outline-danger" type="submit">Search</button>
+          <!-- creating a order button -->
           <button id="myorder" routerLink = "/order" class="btn btn-outline-danger" *ngIf = "!member"  type="button">My Orders</button>
+          <!-- creating a cart button -->
           <button routerLink="./cakecart" class="btn btn-outline-danger" *ngIf = "!member"  type="button"><i class="fas fa-shopping-cart"></i></button>
+          <!-- creating a login button -->
           <button id="login" routerLink = "./login" class="btn btn-outline-danger" *ngIf = "member"  type="submit"><i class="fas fa-sign-in-alt"></i> Login</button>
+          <!-- creating a logout button -->
           <button id="logout" (click) = "logout()" class="btn btn-outline-danger" *ngIf = "!member"  type="button"><i class="fas fa-sign-out-alt"></i> Logout</button>
         </form>
       </div>
