--- a/src/app/orderdetail/orderdetail.component.html
+++ b/src/app/orderdetail/orderdetail.component.html
@@ -1,5 +1,8 @@
+<!-- for creating order billing form -->
 <div class="containers">
+    <!-- creating a form -->
 <form action="">
+    <!-- creating a heading -->
 <h2 class="mb-5">Billing Details</h2>
 <div class="mb-3 col-5">
     <input [(ngModel)] = "personal.name" type="text" name="name" class="form-control" placeholder="Name" aria-label="Username" aria-describedby="basic-addon1">
@@ -16,6 +19,7 @@
 <div class="mb-3 col-5">
     <input [(ngModel)] = "personal.pincode" type="text" name="pincode" class="form-control" placeholder="Pincode" maxlength="6" minlength="6" aria-label="Username" aria-describedby="basic-addon1">
 </div>
+<!-- creating a checkout button -->
 <div class="mb-3 col-5">
     <button (click) = "checkout()">Submit</button>
 </div>
