--- a/src/app/summary/summary.component.html
+++ b/src/app/summary/summary.component.html
@@ -1,7 +1,11 @@
+<!-- For creating UI for page -->
 <div class="containers">
+  <!-- Heading -->
 <h2 id="title">Order Summary</h2>
+<!-- creating a table -->
   <table class="table table-hover">
     <thead>
+      <!-- table headings -->
         <tr>
           <th scope="col">#</th>
           <th scope="col">Cake</th>
@@ -11,6 +15,7 @@
         </tr>
       </thead>
       <tbody>
+        <!-- Looping a data -->
         <tr *ngFor = "let item of detail; let i = index" id="record">
           <td scope="row">{{ i + 1 }}</td>
           <td scope="col"><img id="cakeimg" src="{{item.image}}" alt=""></td>
@@ -19,5 +24,6 @@
           <td>{{item.weight}} kg</td>
         </tr>
 </table>
+<!-- creating a confirm-order button -->
 <button class="btn btn-success" routerLink= "/checkout/orderdetail" click="next()">Confirm Order</button>
 </div>
